--- a/playground/package.json
+++ b/playground/package.json
@@ -26,6 +26,8 @@
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
-    "vue-tsc": "^1.0.8"
+    "vue-tsc": "^1.0.8",
+    "@relaxed/hook": "workspace:1.0.0",
+    "@relaxed/utils": "workspace:*"
   }
 }
